fix search bar dark mode

--- a/Official_Website/contributor-style.css
+++ b/Official_Website/contributor-style.css
@@ -279,6 +279,7 @@ justify-content: center;
   background-color: whitesmoke;
   border-radius: 20px;
   /* border: solid; */
+  background-color: #fff2f2;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
   padding: 20px;
  /* background-color: gray; */
@@ -292,7 +293,27 @@ justify-content: center;
 .team-member:hover{
   transform: scale(1.07);
 }
-
+.team-member2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: whitesmoke;
+  border-radius: 20px;
+  /* border: solid; */
+  background-color: #fff2ff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  padding: 20px;
+ /* background-color: gray; */
+ gap: 10px;
+  margin-left: 20px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  transition: 0.5s;
+}
+.team-member2:hover{
+  transform: scale(1.07);
+}
 .card1 {
   background-color: #fff0f0;
   padding: 2rem;
@@ -352,9 +373,9 @@ justify-content: center;
 }
 
 .badge {
-  position: absolute;
-  top: 15px;
-  right: 15px;
+  position: relative;
+  bottom: 120px;
+  left:800 px;
   display: inline-block;
   padding: 2px 10px;
   border-radius: 20px;
